fix: gives #countdown-text-box margin-top:1.25rem for spacing. Fixes line-height on the <p>s

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,9 +96,14 @@ h1 {
 
 /* COUNTDOWN AREA */
 
+#countdown-text-box {
+    margin-top: 1.25rem;
+}
+
 #users-choice,
 #ai-choosing {
     font-size: 1.2rem;
+    line-height: 0.9;
 }
 
 .countdown-circle {
